it is not working

--- a/test.ipynb
+++ b/test.ipynb
@@ -186,6 +186,22 @@
    "id": "e42e2980",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from sklearn import svm\n",
+    "\n",
+    "cls_svm = svm.SVC(kernel = \"linear\") \n",
+    "\n",
+    "cls_svm.fit(X_train, y_train.values.ravel())\n",
+    "\n",
+    "y_pred = cls_svm.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fb7850c",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
