putting our work together
putting my and Salvador's work together

--- a/FINAL.ipynb
+++ b/FINAL.ipynb
@@ -1964,7 +1964,7 @@
     "import numpy as np\n",
     "\n",
     "eigenvalues, _ = np.linalg.eig(corr_matrix)\n",
-    "print(\"Eigenvalues:\", eigenvalues)"
+    "print(\"Eigenvalues:\", eigenvalues)\n"
    ]
   },
   {
@@ -1983,7 +1983,7 @@
    ],
    "source": [
     "condition_number = np.sqrt(np.max(eigenvalues) / np.min(eigenvalues))\n",
-    "print(\"Condition Number:\", condition_number)"
+    "print(\"Condition Number:\", condition_number)\n"
    ]
   },
   {
@@ -2236,6 +2236,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea8fb6a3",
+   "metadata": {},
+   "source": [
+    "X = bike_d.iloc[:, 1:]  # All rows, columns from index 1 onwards (excluding the first column)\n",
+    "y = bike_d.iloc[:, 0]   # All rows, only the first column"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "id": "2e4a3862",
@@ -2367,11 +2376,16 @@
    "source": [
     "import statsmodels.api as sm\n",
     "\n",
+    "# Assuming X is your feature matrix and y is your target variable\n",
+    "\n",
+    "# Add a constant to the feature matrix (for intercept)\n",
     "X_with_constant = sm.add_constant(X)\n",
     "\n",
+    "# Fit the OLS model\n",
     "model = sm.OLS(y, X_with_constant).fit()\n",
     "\n",
-    "print(model.summary())"
+    "# Summary of the regression results\n",
+    "print(model.summary())\n"
    ]
   },
   {
@@ -2429,6 +2443,139 @@
     "X_test_scaled  = scaler.transform(X_test)\n",
     "\n",
     "X_scaled = scaler.transform(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82fd98e1",
+   "metadata": {},
+   "source": [
+    "# PCA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42ff06dc",
+   "metadata": {},
+   "source": [
+    "from sklearn.decomposition import PCA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bebef52b",
+   "metadata": {},
+   "source": [
+    "pca = PCA()\n",
+    "\n",
+    "pca.fit(X_scaled)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee88badd",
+   "metadata": {},
+   "source": [
+    "variance = pca.explained_variance_ratio_\n",
+    "\n",
+    "var = np.cumsum(np.round(pca.explained_variance_ratio_, decimals = 3)*100)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d82f1fb",
+   "metadata": {},
+   "source": [
+    "plt.figure()\n",
+    "plt.plot(np.cumsum(pca.explained_variance_ratio_))\n",
+    "plt.xlabel(\"Number of Components\")\n",
+    "plt.xticks(np.arange(0, 13, 1), fontsize = 15)\n",
+    "plt.ylabel(\"Variance (%)\")\n",
+    "plt.yticks(np.arange(0.90, 1.0, 0.05), fontsize = 15)\n",
+    "#plt.xticks(np.arange(0, 24, 5), fontsize = 15, rotation = 0, ha = 'center')\n",
+    "plt.title(\"Train Dataset Explained Variance\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39d9fb9b",
+   "metadata": {},
+   "source": [
+    "pca = PCA(n_components = 6)\n",
+    "\n",
+    "bike_pca = pca.fit_transform(X_scaled)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a5b6551",
+   "metadata": {},
+   "source": [
+    "bike_pca = pd.DataFrame(bike_pca)\n",
+    "\n",
+    "bike_pca.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfac47ad",
+   "metadata": {},
+   "source": [
+    "bike_concat = pd.concat([bike_pca, rbc], axis = 1)\n",
+    "\n",
+    "bike_concat.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b554df59",
+   "metadata": {},
+   "source": [
+    "bike_array = bike_concat.values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40f0c842",
+   "metadata": {},
+   "source": [
+    "X = bike_array[:,0:6]\n",
+    "\n",
+    "y = bike_array[:,6]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1b4e5d7",
+   "metadata": {},
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a582e53",
+   "metadata": {},
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "addd7e5b",
+   "metadata": {},
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 12)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dd61888",
+   "metadata": {},
+   "source": [
+    "X.shape, y.shape, X_train.shape, X_test.shape, y_train.shape, y_test.shape"
    ]
   },
   {
@@ -2715,14 +2862,6 @@
     "print(f'Root Mean Squared Error: {mse_r}')\n",
     "print(f'R-squared: {r2}')\n",
     "print(f'Adjusted R-squared: {adj_r2}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "38307690",
-   "metadata": {},
-   "source": [
-    "I tried to check the Training MSE and the Validation MSE but I encountered an error and I could not fixed it."
    ]
   },
   {
@@ -3384,7 +3523,7 @@
     "print(f'Training MSE: {train_mse}')\n",
     "print(f'Validation MSE: {test_mse}')\n",
     "\n",
-    "import tensorflow as tfx\n",
+    "import tensorflow as tf\n",
     "def huber_loss(y_test, y_pred_best, delta = 1.0):\n",
     "    error = y_test - y_pred_best\n",
     "    condition = tf.abs(error) < delta\n",
@@ -3435,9 +3574,7 @@
    "cell_type": "code",
    "execution_count": 79,
    "id": "665034be",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -3510,9 +3647,7 @@
    "cell_type": "code",
    "execution_count": 81,
    "id": "d5178b1d",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -3974,9 +4109,7 @@
    "cell_type": "code",
    "execution_count": 83,
    "id": "8c5330c5",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -4042,9 +4175,7 @@
    "cell_type": "code",
    "execution_count": 84,
    "id": "c3b99ecb",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -4920,7 +5051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 96,
    "id": "7c6a0fea",
    "metadata": {},
    "outputs": [
@@ -4928,15 +5059,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 125089.12711962697\n",
-      "Root Mean Squared Error: 353.67941291461534\n",
-      "R-squared: 0.6904834532890107\n",
-      "Adjusted R-squared: 0.688347628929878\n"
+      "Mean Squared Error: 131211.7797991492\n",
+      "Root Mean Squared Error: 362.2316659254809\n",
+      "R-squared: 0.6753337567669127\n",
+      "Adjusted R-squared: 0.6730933916612214\n"
      ]
     }
    ],
    "source": [
-    "regressor = svm.SVR(kernel = 'rbf', C = 100, epsilon = 2.0, degree = 4)\n",
+    "regressor = svm.SVR(kernel = 'poly', C = 10.0, epsilon = 2.0, degree = 4)\n",
     "\n",
     "regressor.fit(X_train_scaled, y_train)\n",
     "\n",
@@ -4958,30 +5089,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 97,
    "id": "4fa3a720",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6834577048773186"
+       "0.6311822372531833"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "score_svr = cross_val_score(svm.SVR(kernel = 'poly', C = 100, epsilon = 2.0, degree = 4), \n",
+    "score_svr = cross_val_score(svm.SVR(kernel = 'poly', C = 10.0, epsilon = 2.0, degree = 4), \n",
     "                            X_test_scaled, y_test, cv = 10, scoring = 'r2').mean()\n",
     "score_svr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 98,
    "id": "3cf8f7b3",
    "metadata": {},
    "outputs": [
@@ -4989,11 +5120,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training MSE: 135761.57626884966\n",
-      "Validation MSE: 125089.12711962697\n",
-      "Huber Loss: [276.28093829   6.20130279 465.85725358 ...  80.41262384  45.7796784\n",
-      "   4.33054988]\n",
-      "Mean Huber Loss: 229.93000257023587\n"
+      "Training MSE: 144330.44901054853\n",
+      "Validation MSE: 131211.7797991492\n",
+      "Huber Loss: [262.46364556   5.75479504 462.91365616 ...  27.89716222  52.34869084\n",
+      "  14.3959097 ]\n",
+      "Mean Huber Loss: 234.53624251979005\n"
      ]
     }
    ],
@@ -5669,12 +5800,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16cee46d",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "8431e836",
    "metadata": {},
    "source": [
@@ -5726,37 +5851,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7aae0157",
+   "id": "543c1b24",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "R2 LN: 0.46398066023961204\n",
-    "R2 LNP2: 0.5697265332730072\n",
-    "R2 RP2: 0.5393191670254971\n",
-    "R2 RF: 0.744120473979903\n",
-    "R2 Report SVM: 0.38183616633916784\n",
-    "R2 SVR: 0.5257640361539241\n",
-    "R2 KNN: 0.7118386141151822\n",
-    "R2 KNN BGG: 0.6881228765327172\n",
-    "R2 DT: 0.6741207045968063"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "16ab3762",
+   "id": "8706c32c",
    "metadata": {},
    "source": [
-    "## All Variables \n",
-    "\n",
-    "R2 LN: 0.5401567583588167\n",
-    "R2 LNP2: 0.6714985430933418\n",
-    "R2 RP2: 0.6433462216682719\n",
-    "R2 RF: 0.8815899236579663\n",
-    "R2 Report SVM: 0.45513717933451325\n",
-    "R2 SVR: 0.6753337567669127\n",
-    "R2 KNN: 0.8090471993423416\n",
-    "R2 KNN BGG: 0.8170399766379812\n",
-    "R2 DT: 0.8294367608036264"
+    "less X \n",
+    "- R2 LN: 0.52529649482042\n",
+    "- R2 LNP2: 0.6554331060997658\n",
+    "- R2 RP2: 0.6213144674255984\n",
+    "- R2 RF: 0.8652196621176939\n",
+    "- R2 SVM: 0.4251713331905206\n",
+    "- R2 SVR: 0.5968790842225762\n",
+    "- R2 KNN: 0.8351079076593745\n",
+    "- R2 KNN BGG: 0.820196677419755\n",
+    "- R2 DT: 0.8123233303297475"
    ]
   },
   {
@@ -5764,10 +5878,7 @@
    "id": "351d7512",
    "metadata": {},
    "source": [
-    "## PCA\n",
-    "\n",
-    "All the Machine Learning models applied after PCA resulted in poor results as it follows.\n",
-    "\n",
+    "PCA\n",
     "- R2 LN: 0.00026587473278671947\n",
     "- R2 LNP2: -0.016234262458589388\n",
     "- R2 RP2: 4.7678354563984726e-05\n",
@@ -5776,69 +5887,70 @@
     "- R2 SVR: -0.09217215527709399\n",
     "- R2 KNN: -0.09579557291859575\n",
     "- R2 KNN BGG: -0.18895100097992756\n",
-    "- R2 DT: -0.08782161761984697\n",
-    "\n",
-    "You can find the full experiment in the following link: http://localhost:8889/notebooks/Documents/GitHub/ML/PCA.ipynb\n",
-    "\n",
-    "or in my Github repository: https://github.com/izazaka/ML"
+    "- R2 DT: -0.08782161761984697"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4dfe31ae",
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "93c77371",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross Validation LN: 0.5341206624410259\n",
+      "Cross Validation LNP2: 0.5341206624410259\n",
+      "Cross Validation RP2: 0.5186486637938877\n",
+      "Cross Validation RF: 0.8370468983350395\n",
+      "Cross Validation SVM: 0.3638188085225539\n",
+      "Cross Validation SVR: 0.6311822372531833\n",
+      "Cross Validation KNN: 0.736637750071026\n",
+      "Cross Validation KNN BGG: 0.7220922194704742\n",
+      "Cross Validation DT: 0.7352431381070327\n"
+     ]
+    }
+   ],
    "source": [
-    "## Split 10 %\n",
+    "print(\"Cross Validation LN:\", score_l) #yp_lr\n",
     "\n",
-    "R2 LN: 0.5347049423977273 \n",
-    "(No overfitting: Training MSE: 189792.53252521323 Validation MSE:186610.79228381193)\n",
+    "print(\"Cross Validation LNP2:\", score_lp2) #yp_p2\n",
     "\n",
-    "R2 ANN: 0.7734415081502938\n",
-    "(Overfitting Training MSE: 94593.94022420379\n",
-    "Validation MSE: 90863.33278622113. I tried to use a code for finding the best parameters but I could not solve the error that I encountered)\n",
+    "print(\"Cross Validation RP2:\", score_rp2) #yp_rp2\n",
     "\n",
-    "R2 SVR: 0.6936220396720054\n",
-    "(A little bit overfitting Training MSE: 142681.57771167823\n",
-    "Validation MSE: 122875.65273039367 even after using a code to find the best parameters.)\n",
+    "print(\"Cross Validation RF:\", score_rf) #y_pred_best\n",
     "\n",
+    "#ANN y_pred\n",
     "\n",
-    "You can find the full experiment in the following link: http://localhost:8889/notebooks/Documents/GitHub/ML/10p.ipynb#A-little-bit-overfitting\n",
+    "print(\"Cross Validation SVM:\", score_svm) #yp_svm\n",
     "\n",
-    "or in my Github repository: https://github.com/izazaka/ML"
+    "print(\"Cross Validation SVR:\", score_svr) #yp_svm_p2\n",
+    "\n",
+    "print(\"Cross Validation KNN:\", score_knn) #yp_knn\n",
+    "\n",
+    "print(\"Cross Validation KNN BGG:\", score_knn_bgg)  #yp_knn_bgg\n",
+    "\n",
+    "print(\"Cross Validation DT:\", score_dt) #yp_dt\n",
+    "\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8ce35d4f",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87752301",
    "metadata": {},
-   "source": [
-    "## Split 30%\n",
-    "\n",
-    "R2 LN: 0.5369360619674715\n",
-    "(A little bit overfitting Training MSE: 187264.33538299127\n",
-    "Validation MSE: 195025.4952516888)\n",
-    "\n",
-    "\n",
-    "R2 RP2: 0.6392727125476039\n",
-    "(No overfitting Training MSE: 150158.735953171\n",
-    "Validation MSE: 151925.0628436109 but a significant difereence between R2 and Adjusted R2 R-squared (Ridge): 0.6392727125476039\n",
-    "Adjusted R-squared: 0.5354103579312681. Cross-Validation at 0.5249917659671306)\n",
-    "\n",
-    "\n",
-    "R2 ANN: 0.8037361899116371\n",
-    "(A little bit overfitting Training MSE: 94190.77861947824\n",
-    "Validation MSE: 99644.35187497338. I tried to use a code for finding the best parameters but I could not solve the error that I encountered)\n",
-    "\n",
-    "\n",
-    "R2 SVR: 0.6604521937600799\n",
-    "(Not overfitting Training MSE: 144765.91253138767\n",
-    "Validation MSE: 143005.04451917205 after using a code to find the best parameters)\n",
-    "\n",
-    "\n",
-    "You can find the full experiment in the following link: http://localhost:8889/notebooks/Documents/GitHub/ML/30p.ipynb#overfitting-here\n",
-    "\n",
-    "or in my Github repository: https://github.com/izazaka/ML"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff844956",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
