--- a/FINAL.ipynb
+++ b/FINAL.ipynb
@@ -2246,6 +2246,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "62961290",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'bike_d' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m bike_d\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m2\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'bike_d' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "bike_d.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 48,
    "id": "2e4a3862",
    "metadata": {},
@@ -3799,13 +3821,7 @@
       "88/88 [==============================] - 0s 633us/step - loss: 118428.9609 - val_loss: 111480.5156\n",
       "Epoch 73/300\n",
       "88/88 [==============================] - 0s 571us/step - loss: 117981.7891 - val_loss: 111363.8203\n",
-      "Epoch 74/300\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 74/300\n",
       "88/88 [==============================] - 0s 580us/step - loss: 117889.2109 - val_loss: 111668.5781\n",
       "Epoch 75/300\n",
       "88/88 [==============================] - 0s 586us/step - loss: 117620.1641 - val_loss: 110751.0156\n",
@@ -4327,13 +4343,7 @@
       "77/77 [==============================] - 0s 616us/step - loss: 119561.4766 - val_loss: 109490.5938\n",
       "Epoch 73/200\n",
       "77/77 [==============================] - 0s 656us/step - loss: 119184.6875 - val_loss: 112213.5234\n",
-      "Epoch 74/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 74/200\n",
       "77/77 [==============================] - 0s 664us/step - loss: 119891.0078 - val_loss: 108545.4922\n",
       "Epoch 75/200\n",
       "77/77 [==============================] - 0s 667us/step - loss: 118111.2500 - val_loss: 108148.8125\n",
