--- a/final draft .ipynb
+++ b/final draft .ipynb
@@ -1457,11 +1457,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "ba5f429f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rented Bike Count</th>\n",
+       "      <th>Hour</th>\n",
+       "      <th>Temperature(°C)</th>\n",
+       "      <th>Humidity(%)</th>\n",
+       "      <th>Wind speed (m/s)</th>\n",
+       "      <th>Solar Radiation (MJ/m2)</th>\n",
+       "      <th>Rainfall(mm)</th>\n",
+       "      <th>Snowfall (cm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>254</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-5.2</td>\n",
+       "      <td>37</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>204</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-5.5</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Rented Bike Count  Hour  Temperature(°C)  Humidity(%)  Wind speed (m/s)  \\\n",
+       "0                254     0             -5.2           37               2.2   \n",
+       "1                204     1             -5.5           38               0.8   \n",
+       "\n",
+       "   Solar Radiation (MJ/m2)  Rainfall(mm)  Snowfall (cm)  \n",
+       "0                      0.0           0.0            0.0  \n",
+       "1                      0.0           0.0            0.0  "
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bike_d2.head(2)"
+   ]
   },
   {
    "cell_type": "code",
@@ -2870,13 +2945,7 @@
       "88/88 [==============================] - 0s 474us/step - loss: 184715.6875 - val_loss: 175637.2188\n",
       "Epoch 73/300\n",
       "88/88 [==============================] - 0s 487us/step - loss: 184784.7656 - val_loss: 174460.0156\n",
-      "Epoch 74/300\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 74/300\n",
       "88/88 [==============================] - 0s 528us/step - loss: 183983.3125 - val_loss: 175217.3906\n",
       "Epoch 75/300\n",
       "88/88 [==============================] - 0s 534us/step - loss: 184531.2031 - val_loss: 173811.3594\n",
@@ -3428,13 +3497,7 @@
       "77/77 [==============================] - 0s 532us/step - loss: 180126.6406 - val_loss: 161974.1562\n",
       "Epoch 73/200\n",
       "77/77 [==============================] - 0s 673us/step - loss: 179588.0312 - val_loss: 160756.0781\n",
-      "Epoch 74/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 74/200\n",
       "77/77 [==============================] - 0s 611us/step - loss: 179258.5000 - val_loss: 162078.7656\n",
       "Epoch 75/200\n",
       "77/77 [==============================] - 0s 641us/step - loss: 179668.0938 - val_loss: 160225.0469\n",
