--- a/nopca.ipynb
+++ b/nopca.ipynb
@@ -2719,7 +2719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38307690",
+   "id": "e917b4f1",
    "metadata": {},
    "source": [
     "I tried to check the Training MSE and the Validation MSE but I encountered an error and I could not fixed it."
@@ -3664,13 +3664,7 @@
       "88/88 [==============================] - 0s 633us/step - loss: 118428.9609 - val_loss: 111480.5156\n",
       "Epoch 73/300\n",
       "88/88 [==============================] - 0s 571us/step - loss: 117981.7891 - val_loss: 111363.8203\n",
-      "Epoch 74/300\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 74/300\n",
       "88/88 [==============================] - 0s 580us/step - loss: 117889.2109 - val_loss: 111668.5781\n",
       "Epoch 75/300\n",
       "88/88 [==============================] - 0s 586us/step - loss: 117620.1641 - val_loss: 110751.0156\n",
@@ -4196,13 +4190,7 @@
       "77/77 [==============================] - 0s 616us/step - loss: 119561.4766 - val_loss: 109490.5938\n",
       "Epoch 73/200\n",
       "77/77 [==============================] - 0s 656us/step - loss: 119184.6875 - val_loss: 112213.5234\n",
-      "Epoch 74/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 74/200\n",
       "77/77 [==============================] - 0s 664us/step - loss: 119891.0078 - val_loss: 108545.4922\n",
       "Epoch 75/200\n",
       "77/77 [==============================] - 0s 667us/step - loss: 118111.2500 - val_loss: 108148.8125\n",
@@ -5669,7 +5657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16cee46d",
+   "id": "63be83c4",
    "metadata": {},
    "source": []
   },
@@ -5724,11 +5712,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7aae0157",
+   "cell_type": "markdown",
+   "id": "3a5a7e5c",
    "metadata": {},
-   "outputs": [],
    "source": [
     "R2 LN: 0.46398066023961204\n",
     "R2 LNP2: 0.5697265332730072\n",
@@ -5743,7 +5729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16ab3762",
+   "id": "0518da60",
    "metadata": {},
    "source": [
     "## All Variables \n",
@@ -5785,7 +5771,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dfe31ae",
+   "id": "b42530fc",
    "metadata": {},
    "source": [
     "## Split 10 %\n",
@@ -5809,7 +5795,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ce35d4f",
+   "id": "e672d80a",
    "metadata": {},
    "source": [
     "## Split 30%\n",
